--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="card">
         <div class="search">
             <input type="text" placeholder="enter the location" spellcheck="false" id="search-input">
-            <button><img src="image/search-icon.png"></button>
+            <img src="image/search-icon.png" id="search-icon">
         </div>
         <div class="error">
             <p>Invalid location name</p>
